[gd_scene load_steps=3 format=3 uid="uid://c0lk6ojhkhii2"]

[ext_resource type="Script" uid="uid://drjlawxeq7mjx" path="res://scripts/RuneNode.gd" id="1_2qvi3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yflwh"]

[node name="RuneNode" type="Area2D"]
script = ExtResource("1_2qvi3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yflwh")

[node name="NodeSprite" type="Sprite2D" parent="."]

[node name="Highlight" type="Sprite2D" parent="."]

[node name="GlowEffect" type="Sprite2D" parent="."]
